HHH-20347: Replace google-java-format with Eclipse JDT formatter to avoid compatibility issues
Signed-off-by: Koen Aers <koen.aers@gmail.com>