@@ -33,14 +33,6 @@ tasks.register('legacyTest', Test) {
     testClassesDirs = sourceSets.legacyTest.output.classesDirs
     classpath = sourceSets.legacyTest.runtimeClasspath
     useJUnitPlatform()
-    jvmArgs(
-            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-    )
 }
 
 tasks.forbiddenApisLegacyTest {
